White spacing and footer fixes
Eliminated white spacing in dark mode on home page

Changed footer to visible white font in dark mode

--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -52,6 +52,7 @@
 	color: #fff;
 }
 
+
 /* Button */
 
 #wrapper .title {
@@ -121,16 +122,16 @@
 
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
 	flex-direction: column;
 	-webkit-perspective: 1000px;
 	perspective: 1000px;
 	position: relative;
-	min-height: 100%;
+	min-height: 100vh;
+	height: 100%;
 	padding: 3em 5em;
 	z-index: 2;
 	background: #FFF;
-
+	box-sizing: border-box; /* Ensures padding is included within the height/width */
 
 }
 
@@ -143,12 +144,18 @@
 	display: block;
 }
 
+
+@media screen and (max-width: 480px) {
+    #wrapper {
+        padding: 4em 2em 2.5em 2em;
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 360px) {
-
-	#wrapper {
-		padding: 0.75em;
-	}
-
+    #wrapper {
+        padding: 0.75em;
+    }
 }
 
 /* Button styles */
